--- a/Project-Duo/app/views/games/index.html.erb
+++ b/Project-Duo/app/views/games/index.html.erb
@@ -1,3 +1,69 @@
+<section id="showcase">
+  <div class="container index-file-carousel">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="danger"></li>  <!-- danger helps to change the indicators colors -->
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img id="pic"src="images/Battlefield-1.jpg" alt="Battlefield">
+        <div class="carousel-caption">
+        <h3>Battlefield 1</h3>
+        </div>
+      </div>
+
+      <div class="item">
+        <img id="pic" src="images/red-dead.jpg" alt="Red-dead" >
+        <div class="carousel-caption">
+        <h3>Red Dead Redemption 2</h3>
+        </div>
+      </div>
+
+      <div class="item">
+        <img id="pic" src="images/fifa.jpg" alt="Fifa" >
+        <div class="carousel-caption">
+        <h3>FIFA 18</h3>
+        </div>
+      </div>
+    </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <!-- <span class="glyphicon glyphicon-chevron-left"></span> -->
+      <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <!-- <span class="glyphicon glyphicon-chevron-right"></span> -->
+      <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1>Games#index</h1>
 <p>Find me in app/views/games/index.html.erb</p>
 
