this has the controller functionality to be combined with prior work

--- a/Project-Duo/app/views/games/new.html.erb
+++ b/Project-Duo/app/views/games/new.html.erb
@@ -1,7 +1,4 @@
-<h1>Games#new</h1>
-<p>Find me in app/views/games/new.html.erb</p>
-
-<h1>New Post</h1>
+<h1>New Game</h1>
 
 <%= render 'form', game: @game %>
 
